2.5.0 (Jul 16 2015)
    Add depend-on option. It allows to indicate execution dependencies among different submissions.
    Integration with filesets library 1.3.1 to create metadata aggregation before executing tasks and analyses.

2.4.0
    Support analyses with a single group.
    Integration with filesets library 1.2.0.
    Publish a JOB METADATA fileset instance for each job successfully executed.
    Introduce mandatory and optional artifacts for different job phases.

2.3.1 (Nov 22 2013)
    Introduce PLUGIN_NEED_DEFAULT_JVM_OPTIONS variable for default JVM executions
    Use JAVA_OPTS variable to set the amount of memory allocated to the groovy scripts.
    Adjust OGE memory settings to run on standard.q
    Expose PLUGIN_VERSION variable to all plugins
    Default slots with no cardinality to 1 (both for minOccurs and maxOccurs).
    Fix OGE script for remote task submission.
    Select sun_jdk 6.0.25 distribution for task and resource installation on OGE.


2.3 (Sep 05 2013)
    Simulate artifacts, needs and SDK environments in plugins-view-job-env
    Create a map file in oge_job_script to make the OGE variables visible to NYoSh-based plugins
    Refactor ClusterGatewaySimulator to be an also invoked as API
    Fix additivity properties in Log4J configuration

2.2 (Jul 08 2013)
    Add FileSet Browser
    Add command for visualizing the job environment
    Integration with FileSet library 1.1

2.1 (Jun 28 2013)
    First release bundled as Plugins SDK
    Add two new types of plugin: Task and FileSet
    Submission of Aligners and Alignment Analyses as Jobs on OGE
    Local and remote installation of Resources with artifacts
    Local and remote submission of Tasks as Jobs
    Registration/editing/unregistration of FileSet instances
    Integration with FileSet library 1.0
    Migration to BitBucket

2.0 (Apr 16 2013)
    Support library for GobyWeb: load and validate plugin configurations
    Supported plugin types: resource, aligner, alignment analysis