@@ -1,6 +1,7 @@
 2.5.0 (Jul 16 2015)
     Add depend-on option. It allows to indicate execution dependencies among different submissions.
     Integration with filesets library 1.3.1 to create metadata aggregation before executing tasks and analyses.
+    Add dieIfEmpty function to check if an empty variable requires to terminate the job.
 
 2.4.0
     Support analyses with a single group.
